	library are called, and not before. This was notably with -lm and
	-ltrio, where -lm had to be declared after -ltrio.
        (closes # 84)

2021-11-17 David Hughes
	* docs/hmrc.html src/parse.c
	Added support for strftime (3) formatting in the append_filename configuration
	option to allow for archived messages to be split over multiple directories
	(monthly or yearly for example)

2021-09-14 Jose Kahan
	* various files
	Replaced the few remaining calls to snprintf with
	trio_snprintf, a more portable snprintf. Those snprint functions were
	supposed to be trio_snprintf ones since the beginning.

2021-09-14 Jose Kahan
	* src/struct.c src/quotes.c configure.ac src/Makefile.in pcre2/
	Support for PCRE2. Updating shipped PCRE2 lib to upstream v10.37.

2021-09-10 Jose Kahan
	* src/Makefile.in
	Add convert-css rule to use contrib/csstoc.pl to convert
	../docs/hypermail.css into printcss.c This rule must be run by hand as
	we didn't want to tie for the moment hypermail's compilation to a
	working install of perl

	* docs/hypermail.css
	Added the default stylesheet used by hypermail

2021-09-08 Jose Kahan
	* src/print.c src/print.h
	If set_show_headers is configured, output headers respecting the same
	order as they are declared in this configuration variable.

	* src/setup.c
	When using hypermail -v to print out the config options, Makeconfig()
	was dereferencing the values using a pointer to a long, instead of
	a pointer to an int. Even if this function could display wrong values,
	it didn't have any incidence on how hypermail works.

2021-09-07 Jose Kahan
	* src/string.c
	Make unrre() returN NOSUBJECT when a subject is made only of
        one or more Re: (or equivalent) strings.

	* src/parse.c
	findre() was being too greedy and detecting all Re: strings
	even if they were not at the beginning of a subject.

	* src/setup.c src/setup.h src/print.c src/hypermail.c
	Move all CSS statements to an external CSS file called by default